# bounded-range

./: .gitignore  LICENSE  README.md  bounded-range.cabal
Data/: Range.hs
Data/Range/: Algebra.hs  Data.hs  NestedRange.hs  Parser.hs  RangeInternal.hs  Spans.hs  Util.hs
Data/Range/Algebra/: Internal.hs  Predicate.hs  Range.hs
Test/: Range.hs  RangeMerge.hs
