-- The name of the package.
name:                bounded-range

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            An efficient and versatile range library.

-- A longer description of the package.
description:         A fork of the "range" package, adapted for use with Bounded types.

homepage:            https://github.com/blmage/bounded-range

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Benoît Leulliette
                     , Robert Massaioli

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          bl.mage.fr@gmail.com

-- A copyright notice.
-- copyright:

category:            Data

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.8


library
  -- Modules exported by the library.
  exposed-modules:    Data.Range
                      , Data.Range.NestedRange
                      , Data.Range.Parser
                      , Data.Range.Algebra

  -- Modules included in this library but not exported.
  other-modules:  Data.Range.Data
                  , Data.Range.RangeInternal
                  , Data.Range.Spans
                  , Data.Range.Util
                  , Data.Range.Algebra.Internal
                  , Data.Range.Algebra.Range
                  , Data.Range.Algebra.Predicate


  -- Other library packages from which modules are imported.
  build-depends:  base >= 4.7 && < 5
                  , parsec >= 3
                  , safe

  if impl(ghc < 8)
    build-depends: free >= 4.12 && < 5
  else
    build-depends: free >= 4.12

  ghc-options: -Wall


Test-Suite test-range
   type:       exitcode-stdio-1.0
   main-is: Test/Range.hs
   other-modules: Test.RangeMerge
   build-depends: base                          >= 4.5 && < 5
                  , Cabal                       >= 1.14
                  , QuickCheck                  >= 2.4.0.1 && < 3
                  , test-framework-quickcheck2  >= 0.2 && < 0.4
                  , test-framework              >= 0.4 && < 0.9
                  , random                      >= 1.0
                  , range
                  , safe
   if impl(ghc < 8)
    build-depends: free >= 4.12 && < 5
   else
    build-depends: free >= 4.12
   ghc-options: -rtsopts -Wall -fno-enable-rewrite-rules
